updates to player service and rest api completed